--- a/OtoTamir.WEBUI/Views/Client/FinancialHistory.cshtml
+++ b/OtoTamir.WEBUI/Views/Client/FinancialHistory.cshtml
@@ -111,7 +111,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <span class="badge badge-success mr-2 d-print-none">Tahsilat</span>
+                                                    <span class="badge badge-success mr-2 d-print-none text-dark">Tahsilat</span>
                                                     <span class="text-dark font-weight-bold">@item.Description</span>
                                                 }
                                             </td>
