--- a/OtoTamir.WEBUI/Views/ServiceRecord/Ongoing.cshtml
+++ b/OtoTamir.WEBUI/Views/ServiceRecord/Ongoing.cshtml
@@ -255,6 +255,7 @@
             </tbody>
         </table>
     </div>
+    <partial name="_Pagination" model="ViewBag.PagedResult" />
 </div>
 
 @section Scripts {
