--- a/OtoTamir.WEBUI/Views/Client/Clients.cshtml
+++ b/OtoTamir.WEBUI/Views/Client/Clients.cshtml
@@ -204,6 +204,7 @@
                     </tbody>
                 </table>
             </div>
+            <partial name="_Pagination" model="ViewBag.PagedResult" />
         </div>
     </div>
 </div>
