--- a/OtoTamir.WEBUI/Views/Shared/_Pagination.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Pagination.cshtml
@@ -1,16 +1,32 @@
-﻿@using OtoTamir.CORE.Utilities
+﻿@using Microsoft.AspNetCore.Routing
 @model dynamic
 @{
-    
     var pagedResult = Model as dynamic;
 
- 
-    var queryParams = new Dictionary<string, string>();
+    // 1. Controller ve Action bilgisini al
+    var currentAction = ViewContext.RouteData.Values["action"]?.ToString();
+    var currentController = ViewContext.RouteData.Values["controller"]?.ToString();
+
+    // 2. Temiz bir liste (RouteValueDictionary) oluşturuyoruz
+    var routeValues = new RouteValueDictionary();
+
+    // A) ÖNCE ROUTE DATA'YI AL (URL'deki /2 kısmı buradadır)
+    // Bu işlem 'id'nin doğru (2) olarak alınmasını garantiler.
+    foreach (var key in ViewContext.RouteData.Values.Keys)
+    {
+        routeValues[key] = ViewContext.RouteData.Values[key];
+    }
+
+    // B) SONRA QUERY STRING'İ AL (Filtreler)
+    // AMA 'id' ve 'page' query string'den gelirse ALMA!
     foreach (var key in Context.Request.Query.Keys)
     {
-        if (key != "page") 
+        // KİLİT NOKTA BURASI: 'id' parametresini query string'den asla alma!
+        // Zaten yukarıda RouteData'dan (A adımında) doğrusunu aldık.
+        if (!key.Equals("page", StringComparison.OrdinalIgnoreCase) &&
+            !key.Equals("id", StringComparison.OrdinalIgnoreCase))
         {
-            queryParams[key] = Context.Request.Query[key];
+            routeValues[key] = Context.Request.Query[key];
         }
     }
 }
@@ -23,35 +39,39 @@
         </div>
 
         <ul class="pagination pagination-sm m-0 float-right shadow-sm">
+
+            @* ÖNCEKİ SAYFA *@
             <li class="page-item @(pagedResult.CurrentPage == 1 ? "disabled" : "")">
                 @{
-                    queryParams["page"] = (pagedResult.CurrentPage - 1).ToString();
+                    routeValues["page"] = pagedResult.CurrentPage - 1;
                 }
-                <a class="page-link" href="@Url.Action(null, queryParams)">«</a>
+                <a class="page-link" href="@Url.Action(currentAction, currentController, routeValues)">«</a>
             </li>
 
+            @* SAYFA NUMARALARI *@
             @for (int i = 1; i <= pagedResult.PageCount; i++)
             {
                 if (i == 1 || i == pagedResult.PageCount || (i >= pagedResult.CurrentPage - 2 && i <= pagedResult.CurrentPage + 2))
                 {
                     <li class="page-item @(i == pagedResult.CurrentPage ? "active" : "")">
                         @{
-                            queryParams["page"] = i.ToString();
+                            routeValues["page"] = i;
                         }
-                        <a class="page-link" href="@Url.Action(null, queryParams)">@i</a>
+                        <a class="page-link" href="@Url.Action(currentAction, currentController, routeValues)">@i</a>
                     </li>
                 }
                 else if (i == pagedResult.CurrentPage - 3 || i == pagedResult.CurrentPage + 3)
                 {
-                    <li class="page-item disabled"><a class="page-link">...</a></li>
+                    <li class="page-item disabled"><span class="page-link">...</span></li>
                 }
             }
 
+            @* SONRAKİ SAYFA *@
             <li class="page-item @(pagedResult.CurrentPage == pagedResult.PageCount ? "disabled" : "")">
                 @{
-                    queryParams["page"] = (pagedResult.CurrentPage + 1).ToString();
+                    routeValues["page"] = pagedResult.CurrentPage + 1;
                 }
-                <a class="page-link" href="@Url.Action(null, queryParams)">»</a>
+                <a class="page-link" href="@Url.Action(currentAction, currentController, routeValues)">»</a>
             </li>
         </ul>
     </div>
